# Editora

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  AGENTS.md  AUTHORS  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  TODO.md  jreleaser.yml  pom.xml
.claude/: settings.json
.github/workflows/: ci.yml  maven.yml  pages.yml  release.yml
.run/: Editora (Maven).run.xml
branding/: editora.icns
docs/: FEATURES.md  README.md  architecture.md  building-and-packaging.md  conventions.md  dependencies.md  extending.md  glossary.md  gotchas.md  performance.md  plugins.md  release.md  testing.md
docs/decisions/: 0001-richtextfx-fork.md  0002-native-cli-git.md  0003-toml-settings-json-session.md  0004-textmate-grammars.md  0005-in-scene-overlays.md  0006-headless-awt-guard.md  0007-multi-window-shared-config.md  0008-feature-coordinators.md  0009-plugins-no-modulelayer.md  0010-builtin-headless-test-platform.md  README.md
docs/subsystems/: command-system.md  config-and-migrations.md  lsp-and-dap.md
examples/editora-plugins-registry/: README.md  index.json
examples/example-plugin/: build.sh
examples/lorem-ipsum-plugin/: build.sh
packaging/linux/: postinst  (+3 more)
samples/: README.md
samples/build-tools/cargo/: Cargo.toml
samples/build-tools/cargo/src/: main.rs
scripts/: GenSamples.java  PluginSigningTool.java  aot_build.java  build-appimage.sh  build-example-plugin.sh  build-tarball.sh  install-debugpy.sh  install-java-debug.sh  install-jdtls.sh  install-js-debug.sh  measure-startup.sh  worktree.sh
textmate-bundles/: README.md
(+1423 files in other folders)
